Added transactions